<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/choiceDialogRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/dialogWindowBackgroundColor">

    <LinearLayout
        android:layout_width="@dimen/infoDialogWidth"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_info_dialog"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="@dimen/infoDialogPaddingHorizontal"
        android:paddingTop="@dimen/infoDialogPaddingVertical"
        android:paddingEnd="@dimen/infoDialogPaddingHorizontal"
        android:paddingBottom="@dimen/infoDialogPaddingVertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/infoDialogTitleMarginTop"
            android:fontFamily="@font/sf_display_medium"
            android:letterSpacing="0.01"
            android:textAlignment="center"
            android:textColor="@color/infoDialogTitleColor"
            android:textSize="@dimen/dialogСonfirmTextSize"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
            app:layout_constraintStart_toStartOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/resetPasswordLabel"
            tools:text="@string/success" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dialogNegativeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialogСonfirmTextMarginMessage"
                android:paddingBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/sf_display_medium"
                android:letterSpacing="0.01"
                android:textAlignment="center"
                android:textColor="@color/dialogNegativeTextColor"
                android:textSize="@dimen/dialogСonfirmTextSize"
                tools:text="@string/no" />

            <TextView
                android:id="@+id/dialogPositiveButton"
                android:layout_width="wrap_content"
                android:paddingBottom="10dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="@dimen/dialogСonfirmTextMarginMessage"
                android:layout_weight="1"
                android:fontFamily="@font/sf_display_medium"
                android:letterSpacing="0.01"
                android:textAlignment="center"
                android:textColor="@color/dialogСonfirmTextColor"
                android:textSize="@dimen/dialogСonfirmTextSize"
                tools:text="@string/yes" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>