<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/resetPasswordRootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/contentMarginStart" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/contentMarginEnd" />

        <!---->

        <ImageView
            android:id="@+id/resetPasswordArrowBack"
            android:layout_width="6dp"
            android:layout_height="13dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

        <ImageView
            android:id="@+id/logoAppImageView"
            android:layout_width="@dimen/authLogoAppWidth"
            android:layout_height="@dimen/authLogoAppHeight"
            android:layout_marginTop="62dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
            app:layout_constraintStart_toStartOf="@+id/guidelineRight"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:id="@+id/resetPasswordLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sf_display_medium"
            android:letterSpacing="0.01"
            android:text="@string/reset_password"
            android:textAlignment="center"
            android:textColor="#5B5993"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
            app:layout_constraintStart_toStartOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/logoAppImageView" />

        <TextView
            android:id="@+id/resetPasswordDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/sf_display_medium"
            android:letterSpacing="0.01"
            android:text="@string/reset_password_desc"
            android:textAlignment="center"
            android:textColor="#BBBBC7"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
            app:layout_constraintStart_toStartOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/resetPasswordLabel" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/resetPasswordCodeLayout"
            style="@style/TextInputLayoutAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/InputErrorAppearance"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
            app:layout_constraintStart_toStartOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/resetPasswordDesc">

            <EditText
                android:id="@+id/resetPasswordCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_display_regular"
                android:hint="@string/code"
                android:inputType="textEmailAddress"
                android:letterSpacing="0.01"
                android:singleLine="true"
                android:textSize="@dimen/authInputTextSize"
                tools:ignore="TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPasswordLayout"
            style="@style/TextInputLayoutAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/InputErrorAppearance"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
            app:layout_constraintStart_toStartOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/resetPasswordCodeLayout"
            app:passwordToggleDrawable="@drawable/password_toggle_drawable"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_display_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:letterSpacing="0.01"
                android:singleLine="true"
                android:textSize="@dimen/authInputTextSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmNewPasswordLayout"
            style="@style/TextInputLayoutAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/InputErrorAppearance"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
            app:layout_constraintStart_toStartOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/newPasswordLayout"
            app:passwordToggleDrawable="@drawable/password_toggle_drawable"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/confirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_display_regular"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:letterSpacing="0.01"
                android:singleLine="true"
                android:textSize="@dimen/authInputTextSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/changePasswordButton"
            android:layout_width="@dimen/changePasswordButtonWidth"
            android:layout_height="@dimen/loginButtonHeight"
            android:layout_marginTop="308dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_gradient_button"
            android:elevation="4dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:letterSpacing="0.01"
            android:shadowColor="@color/shadowButtonColor"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:textColor="@color/buttonColor"
            android:textSize="@dimen/loginButtonTextSize"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
            app:layout_constraintStart_toStartOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/resetPasswordDesc" />

        <ProgressBar
            android:id="@+id/changePasswordProgress"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/changePasswordButton"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
            app:layout_constraintStart_toStartOf="@+id/guidelineRight"
            app:layout_constraintTop_toTopOf="@+id/changePasswordButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>