<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginRootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/contentMarginStart" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/contentMarginEnd" />

        <!---->

        <include
            android:id="@+id/headerChoiceAuth"
            layout="@layout/layout_auth_header_choice_auth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
            app:layout_constraintStart_toStartOf="@+id/guidelineRight" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginEmailInputLayout"
            style="@style/TextInputLayoutAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/InputErrorAppearance"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
            app:layout_constraintStart_toStartOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/headerChoiceAuth">

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_display_regular"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:letterSpacing="0.01"
                android:singleLine="true"
                android:text="hello@gmail.com"
                android:textSize="@dimen/authInputTextSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPasswordInputLayout"
            style="@style/TextInputLayoutAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/InputErrorAppearance"
            app:hintEnabled="false"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
            app:layout_constraintStart_toStartOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/loginEmailInputLayout"
            app:passwordToggleDrawable="@drawable/password_toggle_drawable"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_display_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:letterSpacing="0.01"
                android:singleLine="true"
                android:text="123$%dfDF1"
                android:textSize="@dimen/authInputTextSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotLoginPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:fontFamily="@font/sf_display_regular"
            android:text="@string/q_forgot_password"
            android:textAlignment="center"
            android:textColor="@color/forgotPasswordTextColor"
            android:textSize="@dimen/forgotPasswordTextSize"
            android:letterSpacing="0.01"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
            app:layout_constraintStart_toStartOf="@+id/guidelineRight" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="@dimen/loginButtonWidth"
            android:layout_height="@dimen/loginButtonHeight"
            android:layout_marginTop="324dp"
            android:background="@drawable/bg_gradient_button"
            android:elevation="4dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:letterSpacing="0.01"
            android:shadowColor="@color/shadowButtonColor"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/buttonColor"
            android:textSize="@dimen/loginButtonTextSize"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
            app:layout_constraintStart_toStartOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/headerChoiceAuth" />

        <ProgressBar
            android:id="@+id/loginProgress"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/loginButton"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
            app:layout_constraintStart_toStartOf="@+id/guidelineRight"
            app:layout_constraintTop_toTopOf="@+id/loginButton" />

        <include
            layout="@layout/layout_auth_accessing_agree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
            app:layout_constraintStart_toStartOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>